refactor: add new package for content handler
